--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,10 @@
             <artifactId>spring-boot-maven-plugin</artifactId>
             <version>2.7.2</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
